--- a/i.html
+++ b/i.html
@@ -181,7 +181,7 @@
 
 
 
-
+<h1></h1>
 
    
 
@@ -271,7 +271,7 @@
 
 
 <section class="hero1">
-  <div class="imagetext"><p>این  سایت یه سایت معمولی نیست <br>طراحی سایت های معتبر فروشگاهی </p></div>
+  <div class="imagetext"><p id="p3">این  سایت یه سایت معمولی نیست <br>طراحی سایت های معتبر فروشگاهی </p></div>
 </section>
 
 
@@ -317,7 +317,7 @@
 
 
 <p class="title">
-تحویل سایت در کمتر از یک هفته .<br> فقط کافیست سفارش خود را ثبت کنید تا شاهد سهولت کار و کیفیت ما باشید.
+تحویل سایت در کمتر از یک هفته . فقط کافیست سفارش<br> خود را ثبت کنید تا شاهد سهولت کار و کیفیت ما باشید.
 </p>
 
 
